fixed card text alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -67,6 +67,7 @@ code {
 .nft .main .tokenInfo .price ins {
   margin-left: -0.3rem;
   margin-right: 0.5rem;
+  align-self: baseline;
 }
 .nft .main .tokenInfo .duration {
   display: flex;
@@ -75,19 +76,10 @@ code {
   margin-right: 0.2rem;
 }
 .nft .main .tokenInfo .duration ins {
-  margin: 0.5rem;
-  margin-bottom: 0.4rem;
+  margin: 0 3px !important;
+  align-self: baseline !important;
 }
-.nft .main .creator {
-  display: flex;
-  align-items: center;
-  margin-top: 0.2rem;
-  margin-bottom: -0.3rem;
-}
-.nft .main .creator ins {
-  color: #a89ec9;
-  text-decoration: none;
-}
+
 .nft .main .creator .wrapper {
   display: flex;
   align-items: center;
